# dbus-java-nativefd

./: .gitignore  Jenkinsfile  README.md  foo-file  pom.xml  testfile  testuser-branch
src/main/java/com/rm5248/dbusjava/nativefd/: MsgHdr.java  NativeMessageReader.java  NativeMessageWriter.java  NativeSocketProvider.java
src/main/jni/: CMakeLists.txt  jni_utils.c  jni_utils.h  native-message-reader.c  native-message-writer.c
src/test/java/com/rm5248/dbusjava/test/: MarshallingFileDescriptorTest.java  NativeStressTest.java
src/test/resources/: logback.xml
